@@ -284,6 +284,17 @@ EOF
 ])
 AT_CLEANUP
 
+AT_SETUP([ignore splines with one point, ticket #29])
+AT_KEYWORDS([read.c])
+AT_CHECK([fig2dev -L box <<EOF
+FIG_FILE_TOP
+3 2 0 0 0 0 50 0 0 0. 0 0 0 0
+0 0 0
+EOF
+], 1, ignore, [Incomplete spline object at line 11.
+])
+AT_CLEANUP
+
 AT_BANNER([Dynamically allocate picture file name.])
 
 AT_SETUP([prepend fig file path to picture file name])
