@@ -11,6 +11,7 @@ NEW FEATURES:
 BUGS FIXED:
 	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
 	Debian bug numbers refer to https://bugs.debian.org/#.
+	o A spline with one point would cause segfault. Fixed, see ticket #29.
 	o Allow one char without newline in the last line of an input file.
 	  Fixes ticket #28.
 	o Harden input, mainly against files in which an incomplete object would
